feature and fix: Recuperação de senha e correção na edição de usuário.